* db: query.count() and query.projectOne() honor sort/skip/limit